# Architecture

./: README.md  appendices.html  appendices_en.html  bibliography.html  bibliography_en.html  biography.html  biography_en.html  download.html  download_en.html  git-history.txt  git_history.html  index.html  index_en.html  script.js  style.css
RaidersArchitecture/: .gitignore  AUTHORS  README.md  purpose_fr.md
RaidersArchitecture/raider_architecture/: Cargo.toml
RaidersArchitecture/raider_architecture/src/: main.rs
RaidersArchitecture/raider_architecture/src/house/: room.rs
purposes/: purpose_en.md  purpose_fr.md
raider_architecture/: Cargo.toml
raider_architecture/src/: lib.rs  main.rs
raider_architecture/src/house/: display.rs  mod.rs  room.rs  save_load.rs
raider_architecture/src/ui/: check.rs  image.rs  mod.rs  random.rs  saves.rs
